fix(fafnir): close a permission race on the secrets and sealing key files
KeyFileManager and SealingKeyFileManager wrote the secrets master key,
its rotated siblings, and the sealing keypair's private half, then
restricted permissions in a second call -- briefly world/group-readable
at the process's default umask in between. Both now go through
OwnerOnlyFiles.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01H6uE8x62ZJ3xtXcAmS5qCc